# difference-generator

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: test-check.yml
gendiff/: __init__.py  cli.py  diff_builder.py  diff_generator.py  diff_tools.py  engine.py  parser.py
gendiff/formatters/: jsonify.py  plain.py  stylish.py
gendiff/parsers/: parser.py
gendiff/readers/: reader.py
gendiff/scripts/: __init__.py  cli.py  diff_generator.py  gendiff.py  parser_json.py  parser_yaml.py  plain_file.yaml  plain_file2.yaml  tree_file1.yaml
tests/: test_gendiff.py
tests/fixtures/: correct_diff_between_1and2.txt  correct_diff_between_2and1.txt  correct_jsonify_diff.json  correct_plain_diff.txt  tree_file2.yaml
